--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
+    "react-csv": "^2.0.1",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
